@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.14 ===
+- Added lsp_xlimit function to limit ranges for both min < max and min >= max ranges.
 
 === 1.0.13 ===
 * Added IF_TRACE and IF_DEBUG macros to <common/debug.h>.
